--- a/index.html
+++ b/index.html
@@ -5,60 +5,59 @@
 <!--[if IE 9 ]>	<html lang="en" class="ie ie9"> <![endif]--> 
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-<meta charset="utf-8">
-<title>Green Cloud - Coming Soon!!!</title>
-<meta name="description" content="Green Cloud Page under construction">
-<meta http-equiv="X-UA-Compatible" content="chrome=1">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold"> 
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Merienda+One&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Frijole&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Gravitas+One&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-<!-- Define the author of the page -->
-<meta name="author" content="Amr Mostafa Mohamed Khalfalla">
+	<meta charset="utf-8">
+	<title>Green Cloud - Coming Soon!!!</title>
+	<meta name="description" content="Green Cloud Page under construction">
+	<meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold"> 
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Merienda+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Frijole&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Gravitas+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<!-- Define the author of the page -->
+	<meta name="author" content="Amr Mostafa Mohamed Khalfalla">
 </head>
 
 <body id="home">
-<div id="Header">
-<div class="wrapper">
-	<h1>Green Cloud</h1>	
+	<div id="Header">
+		<div class="wrapper">
+			<h1>Green Cloud</h1>	
+		</div>
 	</div>
-</div>
-<div id="Content" class="wrapper"> 
-<div class="countdown styled"></div> 
-<h2 class="intro">Take part in the Green Cloud agriculture company and stay tuned for something amazing! insha Allah </h2>
-<div id="subscribe">
-	<!-- 
-		Our website is under construction. Stay tuned for something amazing!.
-		Subscribe to be notified.
-	<form action="" method="post" onsubmit="">
-		<p><input name="" value="Enter your e-mail" type="text" id=""/>
-		<input type="button" value="Submit"/></p>
-	</form>
-	-->
-	<div id="socialIcons">
-		<ul> 
-			<li><a href="" title="Twitter" class="twitterIcon"></a></li>
-			<li><a href="" title="facebook" class="facebookIcon"></a></li>
-			<li><a href="" title="linkedIn" class="linkedInIcon"></a></li>
-			<li><a href="" title="Pintrest" class="pintrestIcon"></a></li>
-		</ul>
+	<div id="Content" class="wrapper"> 
+		<div class="countdown styled"></div> 
+		<h2 class="intro">Take part in the Green Cloud agriculture company and stay tuned for something amazing! insha Allah </h2>
+		<div id="subscribe"></div> 
+		<!-- 
+			Our website is under construction. Stay tuned for something amazing!.
+			Subscribe to be notified.
+		<form action="" method="post" onsubmit="">
+			<p><input name="" value="Enter your e-mail" type="text" id=""/>
+			<input type="button" value="Submit"/></p>
+		</form>
+		-->
+		<div id="socialIcons">
+			<ul> 
+				<li><a href="" title="Twitter" class="twitterIcon"></a></li>
+				<li><a href="" title="facebook" class="facebookIcon"></a></li>
+				<li><a href="" title="linkedIn" class="linkedInIcon"></a></li>
+				<li><a href="" title="Pintrest" class="pintrestIcon"></a></li>
+			</ul>
+		</div>
+		<span class="tempBy">&copy; 2021 <a href="#" alt="Amr">Amr Mostafa Mohamed,&nbsp; </a>All rights reserved.</span>
 	</div>
-</div>
-<span class="tempBy">All rights reserved by: <a href="#" alt="Amr">Amr Mostafa Mohamed</a></span>
-</div>
 
-<div id="overlay"></div>
+	<div id="overlay"></div>
 
-<!--Scripts-->
-<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="js/Backstretch.js"></script>
-<script type="text/javascript" src="js/jquery.countdown.js"></script>
-<script type="text/javascript" src="js/global.js"></script>
+	<!--Scripts-->
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="js/Backstretch.js"></script>
+	<script type="text/javascript" src="js/jquery.countdown.js"></script>
+	<script type="text/javascript" src="js/global.js"></script>
 
 </body>
 </html>
