Adding viewport meta element

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>Green Cloud - Coming Soon!!!</title>
 	<meta name="description" content="Green Cloud Page under construction">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
