--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
 	<div id="Content" class="wrapper"> 
 		<div class="countdown styled"></div> 
-		<h2 class="intro">Take part in the Green Cloud agriculture company and stay tuned for something amazing! insha Allah </h2>
+		<h2 class="intro">Take part in the Green Cloud agriculture company and stay tuned for something amazing! <br>insha Allah. </h2>
 		<div id="subscribe"></div> 
 		<!-- 
 			Our website is under construction. Stay tuned for something amazing!.
