--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 	<meta name="description" content="Green Cloud Page under construction">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
@@ -20,7 +22,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Gravitas+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<!-- Define the author of the page -->
-	<meta name="author" content="Amr Mostafa Mohamed Khalfalla">
+	<meta name="author" content="Amr Mostafa Mohamed KhalfAlla">
 </head>
 
 <body id="home">
@@ -49,13 +51,13 @@
 				<li><a href="" title="Pintrest" class="pintrestIcon"></a></li>
 			</ul>
 		</div>
-		<span class="tempBy">&copy; 2021 <a href="#" alt="Amr">Amr Mostafa Mohamed,&nbsp; </a>All rights reserved.</span>
+		<span class="tempBy">&copy; Green Cloud, <a href="#" alt="Amr">Amr Mostafa Mohamed.&nbsp; </a>All rights reserved.</span>
 	</div>
 
 	<div id="overlay"></div>
 
 	<!--Scripts-->
-	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src="js/Backstretch.js"></script>
 	<script type="text/javascript" src="js/jquery.countdown.js"></script>
 	<script type="text/javascript" src="js/global.js"></script>
