--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Frijole&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Gravitas+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="vegas/vegas.css">
 	<!-- Define the author of the page -->
 	<meta name="author" content="Amr Mostafa Mohamed KhalfAlla">
 </head>
@@ -58,8 +59,8 @@
 
 	<!--Scripts-->
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
-	<script type="text/javascript" src="js/Backstretch.js"></script>
 	<script type="text/javascript" src="js/jquery.countdown.js"></script>
+	<script type="text/javascript" src="vegas/vegas.js"></script>
 	<script type="text/javascript" src="js/global.js"></script>
 
 </body>
